[GEOT-6782] Switch offline tests from JUnit 3 to JUnit 4