@@ -19,46 +19,54 @@ package org.geotools.data.util;
 import java.io.File;
 import java.net.URI;
 import java.net.URL;
-import junit.framework.TestCase;
 import org.geotools.util.Converter;
+import org.junit.Assert;
+import org.junit.Before;
+import org.junit.Test;
 
-public class URConverterFactoryTest extends TestCase {
+public class URConverterFactoryTest {
 
     URConverterFactory f;
 
-    @Override
-    protected void setUp() throws Exception {
+    @Before
+    public void setUp() throws Exception {
         f = new URConverterFactory();
     }
 
+    @Test
     public void testStringToURL() throws Exception {
         Converter c = f.createConverter(String.class, URL.class, null);
-        assertNotNull(c);
+        Assert.assertNotNull(c);
 
-        assertEquals(new URL("http://foo.com"), c.convert("http://foo.com", URL.class));
-        assertEquals(new File("/foo/bar").toURI().toURL(), c.convert("/foo/bar", URL.class));
+        Assert.assertEquals(new URL("http://foo.com"), c.convert("http://foo.com", URL.class));
+        Assert.assertEquals(new File("/foo/bar").toURI().toURL(), c.convert("/foo/bar", URL.class));
     }
 
+    @Test
     public void testStringToURI() throws Exception {
         Converter c = f.createConverter(String.class, URI.class, null);
-        assertNotNull(c);
+        Assert.assertNotNull(c);
 
-        assertEquals(new URI("http://foo.com"), c.convert("http://foo.com", URI.class));
+        Assert.assertEquals(new URI("http://foo.com"), c.convert("http://foo.com", URI.class));
         // assertEquals( new File( "/foo/bar" ).toURI() , c.convert( "/foo/bar", URI.class ) );
     }
 
+    @Test
     public void testURIToURL() throws Exception {
         Converter c = f.createConverter(URL.class, URI.class, null);
-        assertNotNull(c);
+        Assert.assertNotNull(c);
 
-        assertEquals(new URI("http://foo.com"), c.convert(new URL("http://foo.com"), URI.class));
+        Assert.assertEquals(
+                new URI("http://foo.com"), c.convert(new URL("http://foo.com"), URI.class));
     }
 
+    @Test
     public void testURLToURI() throws Exception {
         Converter c = f.createConverter(URI.class, URL.class, null);
-        assertNotNull(c);
+        Assert.assertNotNull(c);
 
-        assertEquals(new URL("http://foo.com"), c.convert(new URI("http://foo.com"), URL.class));
+        Assert.assertEquals(
+                new URL("http://foo.com"), c.convert(new URI("http://foo.com"), URL.class));
     }
     // JD: enable when factory registered
     //    public void testRegistered() throws Exception {
